<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <include layout="@layout/header_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_company"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_city"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/state">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_state"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cost_of_living_index">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_col"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yearly_salary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_salary"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yearly_bonus">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_bonus"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_401k_match">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_401k"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/internet_stipend">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_internet"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/accident_insurance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_accident"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tuition_reimbursement">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_tuition"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <Button
                android:id="@+id/button_back"
                android:text="@string/return_to_main_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginEnd="16dp" />

            <Button
                android:id="@+id/button_save"
                android:text="@string/save"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/button_add_another"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_another_offer" />

        <Button
            android:id="@+id/button_compare_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compare_with_current_job" />
    </LinearLayout>
</ScrollView>
