<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <include
        android:id="@+id/header_logo"
        layout="@layout/header_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/header_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnEditCurrentJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_current_job" />

        <Button android:id="@+id/btnEnterJobOffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_job_offer" />

        <Button android:id="@+id/btnAdjustSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adjust_comparison_settings" />

        <Button android:id="@+id/btnCompareJobs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compare_jobs" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>